# sokoban

./: .gitignore  .gitmodules  CMakeLists.txt  setup.sh
assets/shaders/: f_default.glsl  v_default.glsl
ext/: CMakeLists.txt
ext/miniaudio/: CMakeLists.txt
ext/stb/: CMakeLists.txt
src/: main.c  renderer.c  renderer.h  shader.c  shader.h
src/core/: arena.c  arena.h  logger.c
